--- a/src/app/components/departamentos-component/departamentos-component.html
+++ b/src/app/components/departamentos-component/departamentos-component.html
@@ -12,6 +12,7 @@
                     <th scope="col">Numero</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Localidad</th>
+                    <th scope="col">ACCIONES</th>
                 </tr>
             </thead>
             <tbody>
@@ -21,6 +22,12 @@
                         <td scope="row">{{departamento.numero}}</td>
                         <td>{{departamento.nombre}}</td>
                         <td>{{departamento.localidad}}</td>
+                        <td>
+                            <a [routerLink]="['/details', departamento.numero, departamento.nombre, departamento.localidad]"
+                            class="btn btn-dark">
+                                Details
+                            </a>
+                        </td>
                     </tr>
                 }
             </tbody>
